# wmdtoolkit

./: README.md  pyproject.toml
src/wmdtoolkit/: __init__.py
src/wmdtoolkit/core/application_metadata/: __init__.py  application_metadata.py
tests/: conftest.py
